# yolov8_tensorrt

./: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h  yolo.cpp  yolo.h
model/: readme.md
